# market_prices

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CLAUDE.md  LICENSE.txt  MANIFEST.in  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  ruff.toml  setup.cfg  setup.py
.agents/skills/create-pr/: SKILL.md
.agents/skills/dependencies-management/: SKILL.md
.agents/skills/update-agents-md/: SKILL.md
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: black.yml  build-test.yml  build_test.yml  draft-release-notes.yml  release.yml
docs/: tutorials_docs.md
docs/developers/: other_internals.md  releases.md  serving_data.md  testing.md  typing_doc.md
docs/public/: method_doc.md  parsing.md  typing.md
docs/tutorials/: anchor.ipynb  data_availability.ipynb  intervals.ipynb  other_get_options.ipynb  other_prices_methods.ipynb  periods.ipynb  prices.ipynb  pt_accessor.ipynb  quickstart.ipynb  specific_query_methods.ipynb
docs/tutorials/resources/: 9988.HK_D1.csv  9988.HK_T1.csv  9988.HK_T2.csv  9988.HK_T5.csv  AZN.L_D1.csv  MSFT_D1.csv  MSFT_T1.csv  MSFT_T2.csv  MSFT_T5_with_added_indice.csv  f_AZN.L_H1_fails_on_vol_dtype.csv
etc/: requirements.txt  requirements_dev.txt  requirements_tests.txt
etc/requirements/: requirements.txt  why_here.txt
etc/requirements_dependabot/: requirements_tests.txt  requirements_tests_upper.txt  why_here.txt
src/market_prices/: __init__.py  data.py  daterange.py  errors.py  helpers.py  intervals.py  mptypes.py  parsing.py  pt.py
src/market_prices/prices/: base.py  csv.py  yahoo.py
src/market_prices/prices/config/: config_yahoo.py
src/market_prices/support/: tutorial_helpers.py
src/market_prices/utils/: calendar_utils.py  general_utils.py  pandas_utils.py
tests/: conftest.py  hypstrtgy.py  test_base.py  test_base_prices.py  test_calendar_utils.py  test_csv.py  test_data.py  test_daterange.py  test_helpers.py  test_intervals.py  test_limits.py  test_mpst.py  test_mptypes.py  test_pandas_utils.py  test_parsing.py  test_pt.py  test_tutorial_helpers.py  test_yahoo.py  utils.py
tests/resources/: pbt.dir
tests/resources/csv/: 9988.HK_D1.csv  9988.HK_H1.csv  AZN.L_D1.csv  AZN.L_T1.csv  AZN.L_T2.csv  AZN.L_T5.csv  MSFTALT_T2_low_high_cols_misnamed.csv  MSFTEXTRA_T5.csv  MSFT_D1.csv  RAND_T5_fails_on_high_low.csv  TSLA_HistoricalData_investing.csv  f_9988.HK_T20_fails_on_ohlc_data.csv  f_AZN.L_T20_fails_on_read_csv.csv  f_MSFT_H1_fails_on_no_data.csv  f_MSFT_T20_fails_on_high_low.csv
tests/resources/to_csv/: 9988.HK_1D_191126_240214.csv  9988.HK_1H_231219_240214.csv  9988.HK_1T_240117_240214.csv  9988.HK_2T_240104_240214.csv  9988.HK_5T_231219_240214.csv  AZN.L_1D_930521_240214.csv  AZN.L_1H_231218_240214.csv  AZN.L_1T_240116_240214.csv  AZN.L_2T_240103_240214.csv  AZN.L_5T_231218_240214.csv  MSFT_1D_860313_240214.csv  MSFT_1H_231218_240214.csv  MSFT_1T_240116_240214.csv  MSFT_2T_240103_240214.csv  MSFT_5T_231218_240214.csv
