[build-system]
requires = ["setuptools>=77.0.0", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "market-prices"
description = "Meaningful OHLCV datasets"
authors = [
  {email = "marcusaread.prog@proton.me"},
  {name = "Marcus Read"}
]
readme = "README.md"
license = "MIT"
keywords = [
    "finance",
    "prices",
    "historical-data",
    "yahoo",
    "investing",
    "stocks",
    "currencies",
    "forex",
    "crypto",
    "etf",
    "funds",
    "bonds",
    "commodities",
    "indices",
]
requires-python = ">=3.10, <4"

classifiers = [
	"Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
	"Natural Language :: English",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Education",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "exchange_calendars",
    "numpy",
    "pandas",
    "tzdata",
    "valimp",
    "yahooquery",
]

dynamic = ["version"]

[project.urls]
homepage = "https://github.com/maread99/market_prices"
documentation = "https://github.com/maread99/market_prices/blob/master/docs/tutorials_docs.md"
"Issue Tracker" = "https://github.com/maread99/market_prices/issues"
"Source Code" = "https://github.com/maread99/market_prices"

[dependency-groups]
test = [
    "hypothesis",
    "pre-commit",
    "pytest",
    "pytest-mock",
    "tables",
    "ruff",
]
dev = [
    {include-group = "test"},
    "mypy",
    "mypy-extensions",
    "pandas-stubs",
]

[tool.setuptools_scm]
write_to = "src/market_prices/_version.py"
