[metadata]
name = market_prices
version = attr: market_prices.__version__ 
author = Marcus Read
author_email = marcusaread@gmail.com
description = Meaningful OHLCV datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/maread99/market_prices
project_urls =
	Documentation = https://github.com/maread99/market_prices/blob/master/docs/tutorials_docs.md
	Bug Tracker = https://github.com/maread99/market_prices/issues
	Source Code = https://github.com/maread99/market_prices
keywords = finance, prices, yahoo
license = MIT
platforms = all
classifiers =
	Development Status :: 4 - Beta
	# Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Financial and Insurance Industry
    Intended Audience :: Science/Research
	Natural Language :: English
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: Implementation :: CPython
    Topic :: Education
    Topic :: Office/Business :: Financial
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = ~=3.8
install_requires =
    exchange_calendars >=4.0
    numpy
    pandas >= 1.1
    pydantic
    pytz
    yahooquery

[options.extras_require]
dev = 
    black
    flake8
    flake8-docstrings
    hypothesis
    mypy
    mypy-extensions
    pandas-stubs
    pip-tools
    pre-commit
    pylint
    pytest
    pytest-mock
    tables
    types-pytz